# sqlx-workspace-problem-repro

./: .env  Cargo.toml  README.md
repro-core/: Cargo.toml
repro-core/src/: lib.rs
repro-core/tests/usage/: main.rs
repro-pg/: .env  Cargo.toml
repro-pg/src/: lib.rs
repro-sqlite/: Cargo.toml
repro-sqlite/src/: lib.rs
