[workspace]
resolver = "2"
members = ["repro-core", "repro-pg", "repro-sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
repro-core = { path = "./repro-core" }
repro-pg = { path = "./repro-pg" }
repro-sqlite = { path = "./repro-sqlite" }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "macros"] }
tokio = { version = "1.20.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "tracing",
] }
