[package]
name = "repro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repro-pg = { workspace = true }
repro-sqlite = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
